# handykapp-etl

./: .coveragerc  .gitignore  .gitmodules  .python_version  CODEOWNERS  Dockerfile  FLOWCHART.md  Procfile  README.md  api_info.yml  bha.py  bha_deployment.py  bha_extractor-deployment.yaml  bha_scraper-deployment.yaml  create_deployments.sh  deploy.sh  docker_update.sh  helpers.py  json_editor.py  prefect.yaml  pyproject.toml  rapid_horseracing.py  rapid_horseracing_deployment.py  rapid_horseracing_extractor-deployment.yaml  requirements.txt  settings.toml  test.py  update_python_version.sh
.github/: dependabot.yml
.github/workflows/: build_and_deploy.yml  cicd.yml  deploy.yml  deployment.yml
.prefect/: flows.json
clients/: __init__.py  mongo_client.py
deployments/: bha-deployment.yaml  bha_extractor-deployment.yaml  rapid-horseracing-deployment.yaml
docs/: AGENTS.md
extractors/: bha_extractor.py  rapid_horseracing_extractor.py
flows/: bha.py  digital_ocean_client.py  helpers.py  load.py  mongo_client.py  rapid_horseracing.py  test.py
loaders/: load.py
src/: digital_ocean_client.py  rapid_horseracing_extractor-deployment.yaml  runner.py
src/clients/: __init__.py  mongo_client.py  spaces_client.py
src/extractors/: bha_extractor.py  formdata_extractor.py  rapid_horseracing_extractor.py  theracingapi_extractor.py  trial_extractor.py
src/helpers/: __init__.py  helpers.py
src/loaders/: adders.py  betfair_loader.py  bha_loader.py  core_racecourses_loader.py  dicts_processor.py  formdata_loader.py  getters.py  horse_processor.py  jockey_ratings_loader.py  load.py  loader.py  main_loader.py  person_processor.py  race_processor.py  racecourse_loader.py  rapid_horseracing_loader.py  record_processor.py  selectors.py  shared.py  test_loader.py  theracingapi_loader.py
src/models/: __init__.py  bha_perf_figs_record.py  bha_ratings_record.py  bha_shared_types.py  declaration.py  entry.py  formdata_entry.py  formdata_horse.py  formdata_position.py  formdata_race.py  formdata_record.py  formdata_run.py  formdata_runner.py  hashable_base_model.py  historic_rating_record.py  horse.py  horse_core.py  jockey_rating.py  jockey_ratings.py  mongo_base_model.py  mongo_betfair_horserace_bet_history.py  mongo_betfair_horserace_pnl.py  mongo_formdata_entry.py  mongo_horse.py  mongo_person.py  mongo_race.py  mongo_racecourse.py  mongo_references.py  mongo_run.py  mongo_runner.py  official_ratings.py  operation.py  person.py  pre_mongo_entry.py  pre_mongo_horse.py  pre_mongo_person.py  pre_mongo_race.py  pre_mongo_race_course_details.py  pre_mongo_runner.py  process_base_model.py  (+32 more)
src/processors/: __init__.py  betfair_processor.py  database_processor.py  file_processor.py  formdata_processor.py  horse_core_processor.py  horse_processor.py  page_processor.py  pdf_file_processor.py  person_processor.py  processor.py  race_processor.py  racecourse_processor.py  rapid_file_processor.py  ratings_processor.py  record_processor.py  result_line_processor.py  runner_processor.py  theracingapi_file_processor.py  utils.py  word_processor.py
src/processors/database_processors/: __init__.py  database_processor.py  declaration_processor.py  horse_core_processor.py  horse_processor.py  id_hook.py  person_processor.py  race_processor.py  racecourse_processor.py  result_processor.py
src/processors/formdata_processors/: __init__.py  entry_processor.py  file_processor.py  formdata_context.py  formdata_file_processor.py  formdata_page_processor.py  formdata_word_processor.py  (+4 more)
src/runners/: database_runner.py  source_data_runner.py
src/transformers/: betfair_transformer.py  bha_transformer.py  core_racecourses_transformer.py  core_transformer.py  formdata_transformer.py  jockey_ratings_transformer.py  parsers.py  rapid_horseracing_transformer.py  theracingapi_transformer.py  transformer.py  validators.py
tests/: conftest.py  test_bha.py  test_helpers.py
tests/clients/: test_mongo_client.py  test_spaces_client.py
tests/extractors/: test_bha_extractor.py  test_formdata_extractor.py  test_rapid_horseracing_extractor.py  test_theracingapi_extractor.py
tests/helpers/: test_helpers.py
tests/loaders/: test_bha_loader.py  test_formdata_loader.py  test_getters.py  test_load.py  test_main_loader.py  test_selectors.py  test_shared.py
tests/models/: test_formdata_horse.py  test_formdata_run.py  test_mongo_horse.py  test_mongo_person.py  test_mongo_race.py  test_mongo_racecourse.py  test_mongo_runner.py  test_pre_mongo_horse.py
tests/processors/: test_database_processor.py  test_id_hook.py  test_processor.py  test_utils.py
tests/transformers/: test_betfair_transformer.py  test_bha_transformer.py  test_core_racecourses_transformer.py  test_core_transformer.py  test_formdata_transformer.py  test_parsers.py  test_rapid_horseracing_transformer.py  test_theracingapi_transformer.py  test_transformer.py  test_validators.py
transformers/: bha_transformer.py
(+3 files in other folders)
