[tool.poetry]
name = "handykapp-etl"
version = "0.1.0"
description = "ETL pipeline to feed the handykapp horse racing analysis app"
authors = ["Robert Peacock <robertjamespeacock@gmail.com>"]

[tool.poetry.dependencies]
boto3 = "^1.42.31"
compytition = "^0.3.1"
horsetalk = "^0.30.0"
nameparser = "^1.1.3"
peak-utility = "^0.7.0"
pendulum = ">=3.0.0,<4"
petl = "^1.7.17"
prefect = "^3.6.11"
psutil = "^7.2.1"
pybet = "^0.8.3"
pydantic = "^2.12.5"
pydantic-extra-types = "^2.11.0"
pymongo = "^4.16.0"
python = "~3.13"
python-dotenv = "^1.2.1"
pymupdf = "^1.22.5" # NB >=1.23 interprets Irish apostrophe as some sort of file end marker

[tool.poetry.group.dev.dependencies]
coverage = "^7.13.1"
mongomock = "^4.3.0"
mypy = "^1.19.1"
pytest = "^9.0.2"
pytest-cov = "^7.0.0"
pytest-mock = "^3.15.1"
radon = "^6.0.1"
ruff = "^0.14.13"
skylos = "^3.0.3"
types-requests = "^2.32.4.20260107"

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = "tests"

[tool.ruff.lint]
select = [
    "E", # pycodestyle Error
    "F", # pyflakes
    "C90", # mccabe
    "I", # isort
    "N", # pep8-naming
    "UP", # pyupgrade
    "FBT", # flake8-boolean-trap
    "C4", # flake8-comprehensions
    "PYI", # flake8-pyi
    "PT", # flake8-pytest-style
    "RSE", # flake8-raise
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "PTH", # flake8-use-pathlib
    "PERF", # perflint
    "FURB", # refurb
    "RUF", # ruff specific
    "NPY", # numpy specific

]
ignore = [
    "E402",
    "E501",
    "E731",
    "PT011",
]

[tool.ruff.lint.mccabe]
max-complexity = 15